--- a/bedienbaar.html
+++ b/bedienbaar.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../styles/mobile.css" />
     <link rel="stylesheet" href="../styles/tablet.css" />
     <link rel="stylesheet" href="../styles/desktop.css" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
   </head>
 
   <body>
@@ -133,44 +133,44 @@
           <div class="subcat">
             <button
               class="subcat-btn"
-              onclick="toggle('article3_1')"
+              data-id="article3_1"
             >
-              2.1 Toegankelijke CAPTCHA's
+              3.1 Toegankelijke CAPTCHA's
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article3_2')"
+              data-id="article3_2"
             >
-              2.2 Bewegend beeld (3 sec.)
+              3.2 Bewegend beeld (3 sec.)
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article3_3')"
+              data-id="article3_3"
             >
-              2.3 Invullen gegevens
+              3.3 Invullen gegevens
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article3_4')"
+              data-id="article3_4"
             >
-              2.4 Controle over fouten
+              3.4 Controle over fouten
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article3_5')"
+              data-id="article3_5"
             >
-              2.5 Toetsenbord formulieren
+              3.5 Toetsenbord formulieren
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article3_6')"
+              data-id="article3_6"
             >
-              2.6 Instructies invoervelden 
+              3.6 Instructies invoervelden 
             </button>
           </div>
-          <article id="article3_1" style="display: none">
+          <article id="article3_1" class="content-item hide">
             <h1>
-              CAPTCHA’s zijn toegankelijk voor iedereen.  
+              3.1 CAPTCHA’s zijn toegankelijk voor iedereen.  
             </h1>
             <br />
             <span>
@@ -232,9 +232,9 @@
               Je kunt ook een vernieuwde CAPTCHA of andere controles gebruiken. 
             </p>
           </article>
-          <article id="article3_2" style="display: none">
+          <article id="article3_2" class="content-item hide">
             <h1>
-              Bewegend beeld en geluid dat automatisch start kan uitgezet worden of stopt binnen 3 seconden.
+              3.2 Bewegend beeld en geluid dat automatisch start kan uitgezet worden of stopt binnen 3 seconden.
             </h1>
             <br />
             <span>
@@ -266,9 +266,9 @@
               Beter is om helemaal geen beeld en geluid te gebruiken dat automatisch start.
             </p>
           </article>
-          <article id="article3_3" style="display: none">
+          <article id="article3_3" class="content-item hide">
             <h1>
-              Bezoekers hebben geen last van een tijdslimiet bij het invullen van gegevens 
+              3.3 Bezoekers hebben geen last van een tijdslimiet bij het invullen van gegevens 
             </h1>
             <br />
             <span>
@@ -330,9 +330,9 @@
               Zorg ervoor dat de gebruiker de tijdslimiet kan stopzetten, aanpassen of uitbreiden
             </p>
           </article>
-          <article id="article3_4" style="display: none">
+          <article id="article3_4" class="content-item hide">
             <h1>
-              Bezoekers kunnen zelf fouten voorkomen bij formulieren waarbij belangrijke acties in gang worden gezet door te annuleren, controleren of bevestigen.
+              3.4 Bezoekers kunnen zelf fouten voorkomen bij formulieren waarbij belangrijke acties in gang worden gezet door te annuleren, controleren of bevestigen.
             </h1>
             <br />
             <span>
@@ -393,9 +393,9 @@
             Let vooral op bij wettelijke en financiële transacties, hier zijn de gevolgen het grootst. 
             </p>
           </article>
-          <article id="article3_5" style="display: none">
+          <article id="article3_5" class="content-item hide">
             <h1>
-              Alle onderdelen van formulieren zijn via het toetsenbord te bereiken en bedienen in logische volgorde.
+              3.5 Alle onderdelen van formulieren zijn via het toetsenbord te bereiken en bedienen in logische volgorde.
             </h1>
             <br />
             <span>
@@ -457,9 +457,9 @@
               Gebruik een passende styling die bij de vormgeving past en ook nog eens toegankelijk is.
             </p>
           </article>
-          <article id="article3_6" style="display: none">
+          <article id="article3_6" class="content-item hide">
             <h1>
-              Alle invoervelden hebben een duidelijke instructie.
+              3.6 Alle invoervelden hebben een duidelijke instructie.
             </h1>
             <br />
             <span>
