--- a/begrijpelijk.html
+++ b/begrijpelijk.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../styles/mobile.css" />
     <link rel="stylesheet" href="../styles/tablet.css" />
     <link rel="stylesheet" href="../styles/desktop.css" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
   </head>
 
   <body>
@@ -133,50 +133,50 @@
           <div class="subcat">
             <button
               class="subcat-btn"
-              onclick="toggle('article2_1')"
+              data-id="article2_1"
             >
               2.1 Taalniveau B1
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article2_2')"
+              data-id="article2_2"
             >
               2.2 Duidelijke titel
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article2_3')"
+              data-id="article2_3"
             >
               2.3 Beschrijvende koppen
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article2_4')"
+              data-id="article2_4"
             >
               2.4 Beschrijvende afbeeldingen
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article2_5')"
+              data-id="article2_5"
             >
               2.5 Tekst als afbeelding
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article2_6')"
+              data-id="article2_6"
             >
               2.6 Tabellen met omschrijving 
             </button>
             <button
             class="subcat-btn"
-            onclick="toggle('article2_7')"
+            data-id="article2_7"
           >
             2.7 Voorstelbare formulieren 
           </button>
           </div>
-          <article id="article2_1" style="display: none">
+          <article id="article2_1" class="content-item hide">
             <h1>
-              Is de tekst in taalniveau B1 geschreven?
+              2.1 Is de tekst in taalniveau B1 geschreven?
             </h1>
             <br />
             <span>
@@ -238,9 +238,9 @@
               Voor het schrijven van de teksten kan de redactie gebruik maken van een taaltool. Deze tool met het gemiddelde taalniveau van een tekst en geeft aan welke aanpassingen nodig zijn om het gewenste niveau te bereiken. 
             </p>
           </article>
-          <article id="article2_2" style="display: none">
+          <article id="article2_2" class="content-item hide">
             <h1>
-              Heeft de pagina een duidelijke titel die de inhoud van de pagina beschrijft?
+              2.2 Heeft de pagina een duidelijke titel die de inhoud van de pagina beschrijft?
             </h1>
             <br />
             <svg
@@ -301,9 +301,9 @@
               De titel van een pagina moet duidelijk beschrijven waar de pagina over gaat en (tussen-)kippen moeten het onderwerp of het doel van de paragrafen die erbij horen beschrijven. 
             </p>
           </article>
-          <article id="article2_3" style="display: none">
+          <article id="article2_3" class="content-item hide">
             <h1>
-              Heeft de tekst duidelijk en beschrijvende koppen en tussenkoppen?            </h1>
+              2.3 Heeft de tekst duidelijk en beschrijvende koppen en tussenkoppen?            </h1>
             <br />
             <span>
               <svg
@@ -364,9 +364,9 @@
               Vermijd grote lappen tekst. Grote lappen tekst zijn erg lastig te lezen voor gebruikers met een autismespectrum stoornis of gebruikers met dyslexie 
             </p>
           </article>
-          <article id="article2_4" style="display: none">
+          <article id="article2_4" class="content-item hide">
             <h1>
-              Voor ingewikkeldere afbeeldingen die informatie bevatten, zoals grafieken of infographics, is een langere beschrijving gemaakt (naast de alt-tekst).            </h1>
+              2.4 Voor ingewikkeldere afbeeldingen die informatie bevatten, zoals grafieken of infographics, is een langere beschrijving gemaakt (naast de alt-tekst).            </h1>
             <br />
             <span>
               <svg
@@ -424,9 +424,9 @@
             </span>
             Plaats een bijschrift boven of onder de afbeelding.             </p>
           </article>
-          <article id="article2_5" style="display: none">
+          <article id="article2_5" class="content-item hide">
             <h1>
-              Tekst is niet als afbeelding geplaatst maar als echte tekst.             </h1>
+              2.5 Tekst is niet als afbeelding geplaatst maar als echte tekst.             </h1>
             <br />
             <span>
               <svg
@@ -487,9 +487,9 @@
               Uitzonderingen voor afbeeldingen van tekst zijn onderworpen aan richtlijnen voor kleur. 
             </p>
           </article>
-          <article id="article2_6" style="display: none">
+          <article id="article2_6" class="content-item hide">
             <h1>
-              Tabellen hebben een bijschrift of samenvatting.
+              2.6 Tabellen hebben een bijschrift of samenvatting.
             </h1>
             <br />
             <span>
@@ -551,9 +551,9 @@
               Om het bijschrift of de samenvatting te verbinden aan de tabel moet je de juiste code gebruiken.
             </p>
           </article>
-          <article id="article2_7" style="display: none">
+          <article id="article2_7" class="content-item hide">
             <h1>
-              De werking van het formulier is voorspelbaar (bijv. verzenden pas na zelf klikken of informatie daarover).
+              2.7 De werking van het formulier is voorspelbaar (bijv. verzenden pas na zelf klikken of informatie daarover).
             </h1>
             <br />
             <span>
