--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../styles/tablet.css" />
   <link rel="stylesheet" href="../styles/desktop.css" />
   <link rel="stylesheet" href="../styles/desktop-xl.css" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
 </head>
 
 <body>
