--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="../styles/mobile.css" />
     <link rel="stylesheet" href="../styles/tablet.css" />
     <link rel="stylesheet" href="../styles/desktop.css" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
   </head>
 
   <body>
     <header>
-      <a href="/">
-        <img
-          id="logo"
-          src="../assets/logo.png"
-          alt="logo Vervoerregio Amsterdam"
-        />
-      </a>
+        <a href="/">
+          <img
+            id="logo"
+            src="../assets/logo.png"
+            alt="logo Vervoerregio Amsterdam"
+          />
+        </a>
       <div id="after-curve"></div>
     </header>
 
@@ -81,7 +81,7 @@
     <!-- Dit zijn de drie knoppen om de toegankelijkheid van de content te verbeteren -->
     <ul class="ui-settings">
       <li>
-        <a onclick="element">
+        <button onclick="increaseFontSize">
           <svg
             width="33"
             height="21"
@@ -94,11 +94,11 @@
               fill=""
             />
           </svg>
-        </a>
+        </button>
       </li>
 
       <li>
-        <a href="">
+        <button onclick="increaseContrast">
           <svg
             width="36"
             height="36"
@@ -113,7 +113,7 @@
               fill=""
             />
           </svg>
-        </a>
+        </button>
       </li>
     </ul>
 
@@ -127,54 +127,55 @@
       </div>
       <section class="folder">
         <div class="content">
-          <h1>Selecteer een onderwerp</h1>
+          <h1 class="select-title">Selecteer een onderwerp</h1>
           <div class="subcat">
             <button
               class="subcat-btn"
-              onclick="toggle('article1_1')"
+              data-id="article1_1"
             >
               1.1 Gesproken tekst
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article1_2')"
+              data-id="article1_2"
             >
               1.2 Visuele Audiobeschrijving
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article1_3')"
+              data-id="article1_3"
             >
               1.3 Visuele aanwijzingen
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article1_4')"
+              data-id="article1_4"
+              data-background="hotpink"
             >
               1.4 Ingevulde velden
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article1_5')"
+              data-id="article1_5"
             >
               1.5 Voorgelezen inhoud
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article1_6')"
+              data-id="article1_6"
             >
               1.6 Uitvergroot tot 200%
             </button>
             <button
               class="subcat-btn"
-              onclick="toggle('article1_7')"
+              data-id="article1_7"
             >
               1.7 Aangepaste tekstgrootte
             </button>
           </div>
-          <article id="article1_1" style="display: none">
+          <article id="article1_1" class="content-item hide">
             <h1>
-              Filmpjes hebben een ondertiteling met de
+              1.1 Filmpjes hebben een ondertiteling met de
               gesproken tekst en andere geluiden
             </h1>
             <br />
@@ -249,9 +250,9 @@
               audiodescriptie en een tekstalternatief.
             </p>
           </article>
-          <article id="article1_2" style="display: none">
+          <article id="article1_2" class="content-item hide">
             <h1>
-              Filmpjes en bewegend beeld hebben (indien
+              1.2 Filmpjes en bewegend beeld hebben (indien
               nodig) een audiobeschrijving
             </h1>
             <br />
@@ -330,9 +331,9 @@
               anders twee stemmen door elkaar klinken.
             </p>
           </article>
-          <article id="article1_3" style="display: none">
+          <article id="article1_3" class="content-item hide">
             <h1>
-              Fouten en knoppen bestaan niet alléén uit
+              1.3 Fouten en knoppen bestaan niet alléén uit
               visuele aanwijzingen (bijv. rode kleur).
             </h1>
             <br />
@@ -400,9 +401,9 @@
               aanwijzingen uit verschillende spectrums.
             </p>
           </article>
-          <article id="article1_4" style="display: none">
+          <article id="article1_4" class="content-item hide">
             <h1>
-              Fouten of niet ingevulde velden zijn duidelijk aangegeven en er is, als dat kan, een suggestie voor verbetering.
+              1.4 Fouten of niet ingevulde velden zijn duidelijk aangegeven en er is, als dat kan, een suggestie voor verbetering.
             </h1>
             <br />
             <span>
@@ -463,9 +464,9 @@
             Verrijk de foutmelding met een concreet invulvoorbeeld.
             </p>
           </article>
-          <article id="article1_5" style="display: none">
+          <article id="article1_5" class="content-item hide">
             <h1>
-              De inhoud kan worden voorgelezen door een toepassing op de site/app
+              1.5 De inhoud kan worden voorgelezen door een toepassing op de site/app
             </h1>
             <br />
             <span>
@@ -527,9 +528,9 @@
               Geef duidelijk aan waar gebruikers de inhoud kunnen laten voorlezen. 
             </p>
           </article>
-          <article id="article1_6" style="display: none">
+          <article id="article1_6" class="content-item hide">
             <h1>
-              De inhoud kan worden uitvergroot tot 200% zonder dat er inhoud uit het zicht verdwijnt
+              1.6 De inhoud kan worden uitvergroot tot 200% zonder dat er inhoud uit het zicht verdwijnt
             </h1>
             <br />
             <span>
@@ -591,9 +592,9 @@
               Geef deze eis duidelijk aan bij de ontwikkelaar van de website/app
             </p>
           </article>
-          <article id="article1_7" style="display: none">
+          <article id="article1_7" class="content-item hide">
             <h1>
-              Gebruikers kunnen de tekstgrootte aanpassen
+              1.7 Gebruikers kunnen de tekstgrootte aanpassen
             </h1>
             <br />
             <span>
